// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sandbox form components @/sandbox/components/form/CCheckboxGroup 1`] = `
<bformcheckboxgroup-stub
  checked=""
  disabledfield="disabled"
  htmlfield="html"
  options="[object Object],[object Object]"
  textfield="text"
  value=""
  valuefield="value"
/>
`;

exports[`Sandbox form components @/sandbox/components/form/CNumber 1`] = `
<bforminput-stub
  debounce="0"
  formatter="function bvConfigurablePropDefault() {
    const value = (0, _config.getComponentConfig)(componentKey, key, prop.default);
    return (0, _inspect.isFunction)(value) ? value() : value;
  }"
  lazy="true"
  placeholder=<Default>
  step="1"
/>
`;

exports[`Sandbox form components @/sandbox/components/form/CRadioGroup 1`] = `
<div
  class="bv-no-focus-ring"
  options="[object Object],[object Object]"
  role="radiogroup"
  tabindex="-1"
>
  <div
    class="custom-control custom-control-inline custom-radio"
  >
    <input
      class="custom-control-input"
      type="radio"
      value="a"
    />
    <label
      class="custom-control-label"
    >
      <span>
        Option A
      </span>
    </label>
  </div>
  <div
    class="custom-control custom-control-inline custom-radio"
  >
    <input
      class="custom-control-input"
      type="radio"
      value="b"
    />
    <label
      class="custom-control-label"
    >
      <span>
        Option B
      </span>
    </label>
  </div>
</div>
`;

exports[`Sandbox form components @/sandbox/components/form/CSelect 1`] = `
<bformselect-stub
  options="[object Object],[object Object]"
/>
`;

exports[`Sandbox form components @/sandbox/components/form/CTextInput 1`] = `
<bforminput-stub
  lazy="true"
  placeholder=<Default>
/>
`;

exports[`Sandbox form components @/sandbox/components/form/CTextarea 1`] = `
<textarea
  class="form-control"
  debounce="0"
  formatter="function bvConfigurablePropDefault() {
      var value = getComponentConfig(componentKey, key, prop.default);
      return isFunction(value) ? value() : value;
    }"
  rows="2"
  wrap="soft"
/>
`;

exports[`Sandbox form components @/sandbox/components/form/CTimepicker 1`] = `
<binput-stub
  lazy="true"
  placeholder="HH:mm"
/>
`;

exports[`Sandbox form components @/sandbox/components/form/CToggle 1`] = `
<bformcheckbox-stub
  id=""
  size="lg"
  switch=""
  type="text"
/>
`;
